[package]
name = "jscjs"
description = "Rust bindings to Webkit's JavaScriptCore JavaScript engine."
repository = "https://github.com/drtychai/rust-jscjs"
version = "0.0.2"
authors = ["bynx <drtychai@protonmail.com>"]
license = "AGPL-3.0"
edition = "2018"

[lib]
name = "jscjs"
path = "src/lib.rs"

[dependencies]
url = "2.1.1"
jscjs_sys = "0.0.3"
